# angband

./: .gitignore  Angband.sln  Angband.vcxproj  Angband.vcxproj.filters  AngbandClient.vcxproj  AngbandClient.vcxproj.filters  AngbandServer.vcxproj  AngbandServer.vcxproj.filters  CMakeLists.txt  CONTRIBUTING.md  LibPngMacros.props  README.md  SDLMacros.props  changes.txt  configure.ac
.github/workflows/: release.yaml
IntegratedDLLs/: DLLInformation.txt
Oldlib/customize/: class.prf
Oldlib/gamedata/: shape.txt  ui_entry.txt  ui_entry_base.txt  ui_entry_renderer.txt  world.txt
SinglePlayerSrc/: Makefile.std  list-object-flags.h  list-stats.h  main-x11.c
SinglePlayerSrc/ProjectFiles/: Angband.vcxproj
SinglePlayerSrc/cmake/macros/: WINDOWS_Frontend.cmake
SinglePlayerSrc/cocoa/: AppDelegate.m
SinglePlayerSrc/doc/: doxygen.conf  new-egos.rst  release-checklist.rst
SinglePlayerSrc/tests/: Makefile.inc
SinglePlayerSrc/win/: angband_visual_studio_step_by_step.txt
TangbandFileLists/: ClientCFiles.txt  ClientHeaderFiles.txt  CommonCFiles.txt  CommonHeaderFiles.txt  CoreLibFilesBeforeFolderChange.txt  SPExclusiveCFiles.txt  SPExclusiveHFiles.txt  ServerCFiles.txt  ServerHeaderFiles.txt
docs/hacking/: compiling.rst  debug.rst  modifying.rst
lib/: readme.txt
lib/customize/: class.prf  font.prf  pref.prf  user.prf
lib/gamedata/: class.txt  curse.txt  ego_item.txt  monster.txt  object.txt  object_base.txt  p_race.txt  room_template.txt  shape.txt  summon.txt  vault.txt
lib/help/: r_comm.txt
lib/tiles/: list.txt
lib/tiles/adam-bolt/: graf-new.prf  xtra-new.prf
lib/tiles/gervais/: graf-dvg.prf  xtra-dvg.prf
lib/tiles/nomad/: flvr-nmd.prf  graf-nmd.prf  xtra-nmd.prf
lib/tiles/old/: graf-xxx.prf  xtra-xxx.prf
lib/tiles/shockbolt/: graf-shb-dark.prf  graf-shb-light.prf  xtra-shb.prf
m4/: buildsys.m4
scripts/: pkg_win  version.sh
src/: cmd-wizard.c  effect-handler-attack.c  effect-handler-general.c  effects-info.c  game-world.c  gen-cave.c  gen-room.c  generate.c  init.c  load.c  main-nds.c  main-sdl.c  main-sdl2.c  main-win.c  main-x11.c  message.c  mon-blows.c  mon-make.c  mon-move.c  mon-util.c  obj-curse.c  obj-gear.c  obj-knowledge.c  obj-pile.c  player-attack.c  player-calcs.c  player-spell.c  player-util.c  project-player.c  project.c  save.c  ui-display.c  ui-game.c  ui-help.c  ui-keymap.c  ui-knowledge.c  ui-mon-list.c  ui-options.c  ui-output.c  ui-player.c  (+4 more)
src/LegacySDLIncludes/: SDL_config_win32.h
src/ProjectFiles/: Angband.sln  Angband.vcxproj  Angband.vcxproj.filters
src/SDL1/: SDL_config.h
src/SDL1/Win32/: SDL.exp  SDL.ilk
src/SDL1/x64/: SDL.exp  SDL.ilk  SDL.lib
src/SDL2/Win32/: FreetypeBlazesRus.exp  FreetypeBlazesRus.lib  SDL2_image.exp  SDL2_image.ilk  SDL2_mixer.lib  SDL2_ttf.exp  SDL2_ttf.ilk  native_midi.lib  timidity.lib
src/SDL2/x64/: SDL.exp  SDL2.exp  SDL2_image.lib  SDL2_ttf.ilk  SDL2main.lib  native_midi.lib
src/SPClient/: Makefile.msys2  Makefile.std  Makefile.win  cave-square.c  cave.c  cmd-core.c  cmd-obj.c  cmd-wizard.c  effect-handler-attack.c  effect-handler-general.c  effects-info.c  effects.c  gen-cave.c  gen-monster.c  gen-room.c  gen-util.c  init.c  list-object-flags.h  list-stats.h  load.c  main-gcu.c  main-nds.c  main-sdl2.c  main-stats.c  main-test.c  main-win.c  main-x11.c  main.c  mon-attack.c  mon-blows.c  mon-list.c  mon-make.c  mon-move.c  mon-msg.c  mon-timed.c  obj-gear.c  obj-ignore.c  obj-list.c  obj-make.c  obj-slays.c  (+29 more)
src/SPClient/cocoa/: AppDelegate.m
src/SPClient/doc/: doxygen.conf  new-egos.rst  release-checklist.rst
src/SPClient/nds/: nds-buttons.c  nds-draw.c  nds-keyboard.c
src/SPClient/tests/: Makefile.inc  unit-test.c
src/SPClient/win/: angband_visual_studio_step_by_step.txt  readpng.c  scrnshot.c  win-layout.c
src/_SDL2/Win32/: SDL2_image.lib
src/_SDL2VC/: SDL_cpuinfo.h
src/_SDL2VC/ClangWin32/: SDL2.lib  SDL2main.lib
src/_SDL2VC/Win32/: SDL2.exp  SDL2.lib  SDL2_image.exp  SDL2_image.ilk  SDL2_image.lib  SDL2_mixer.exp  SDL2_mixer.lib  SDL2_ttf.exp  SDL2_ttf.ilk  SDL2_ttf.lib  SDL2main.lib  SDLmain.lib  freetype.exp  native_midi.lib  timidity.lib
src/_SDL2VC/x64/: SDL.lib  SDL2.exp  (+14 more)
src/client/: c-angband.h  cmd-core.c  cmd-core.h  game-event.c  game-event.h  game-input.c  game-input.h  grafmode.c  grafmode.h  main-gcu.c  main-sdl.c  main-sdl2.c  main-win.c  main.c  main.h  netclient.h  player-properties.c  player-properties.h  set_focus.c  snd-sdl.c  snd-sdl.h  snd-win.h  sound-core.c  sound.h  ui-birth.c  ui-birth.h  ui-command.c  ui-command.h  ui-context.c  ui-context.h  ui-curse.c  ui-curse.h  ui-death.c  ui-death.h  ui-display.c  ui-display.h  ui-event.c  ui-event.h  ui-game.c  ui-game.h  (+27 more)
src/common/: CVector.c  CVector.h  angband.h  bit.h  buildid.c  buildid.h  config.h  datafile.c  datafile.h  display.h  guid.c  h-basic.h  h-net.h  h-quark.h  list-elements.h  list-equip-slots.h  list-history-types.h  list-ignore-types.h  list-kind-flags.h  list-message.h  list-mon-message.h  list-mon-race-flags.h  list-mon-spells.h  list-mon-temp-flags.h  list-mon-timed.h  list-object-flags.h  list-object-modifiers.h  list-options.h  list-packets.h  list-parser-errors.h  list-player-flags.h  list-player-timed.h  list-projections.h  list-square-flags.h  list-stats.h  list-trap-flags.h  list-tvals.h  md5.h  mon-common.h  net-unix.h  (+47 more)
src/nds/: nds-buttons.c  nds-screenkeys.c
src/server/: alloc.h  cave-map.c  cave-square.c  cave-view.c  cave.c  cave.h  channel.h  cmd-cave.c  cmd-misc.c  cmd-obj.c  cmd-pickup.c  cmds.h  display-ui.h  effect-handler-attack.c  effect-handler-general.c  effect-handler.h  effects-info.c  effects-info.h  effects.c  effects.h  game-world.c  game-world.h  gen-cave.c  gen-chunk.c  gen-monster.c  gen-room.c  gen-util.c  generate.c  generate.h  help-ui.h  history-ui.h  house.h  init.c  init.h  list-attack-effects.h  list-dun-profiles.h  list-dungeon-flags.h  list-effects.h  list-origins.h  list-randart-properties.h  (+131 more)
src/tests/: Makefile.inc
src/win/: AngbandServer.rc  MbandClient.rc  angband.rc  pnglibconf.h  readpng.c  win-layout.c  win-term.h
(+25 files in other folders)
